[gd_scene load_steps=7 format=3 uid="uid://lkfjmh1we05y"]

[ext_resource type="Script" path="res://node_3d.gd" id="1_tgocl"]
[ext_resource type="FontFile" uid="uid://dp10821prnxuc" path="res://ARMY RUST.ttf" id="2_snle5"]
[ext_resource type="Theme" uid="uid://dl5w3kgd0pi8t" path="res://InterfaceTheme.tres" id="3_3u6l1"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_j601a"]
bounce = 1.0
absorbent = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8tlq6"]
albedo_color = Color(0, 0.521569, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_bclrt"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_tgocl")

[node name="Coll" type="StaticBody3D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_j601a")

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="Coll"]
transform = Transform3D(20.03, 0, 0, 0, 1.002, 0, 0, 0, 20.03, -10, -0.5, 10)
material = SubResource("StandardMaterial3D_8tlq6")

[node name="Floor" type="CollisionShape3D" parent="Coll"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, -9.5, 0)
shape = SubResource("BoxShape3D_bclrt")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Coll"]
transform = Transform3D(-8.74228e-07, -20, 0, 20, -8.74228e-07, 0, 0, 0, 20, 20, 10, 0)
shape = SubResource("BoxShape3D_bclrt")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Coll"]
transform = Transform3D(-8.74228e-07, -20, 0, 20, -8.74228e-07, 0, 0, 0, 20, -20, 10, 0)
shape = SubResource("BoxShape3D_bclrt")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Coll"]
transform = Transform3D(3.82137e-14, 8.74228e-07, 20, 20, -8.74228e-07, 0, 8.74228e-07, 20, -8.74228e-07, 0, 10, 20)
shape = SubResource("BoxShape3D_bclrt")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="Coll"]
transform = Transform3D(3.82137e-14, 8.74228e-07, 20, 20, -8.74228e-07, 3.38813e-21, 8.74228e-07, 20, -8.74228e-07, 0, 10, -20)
shape = SubResource("BoxShape3D_bclrt")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="Coll"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 30.5, 0)
shape = SubResource("BoxShape3D_bclrt")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(-0.998135, 0.0286605, -0.0539026, 0, 0.882948, 0.469472, 0.0610485, 0.468596, -0.881301, 0, 8.6123, -13.8535)

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(-0.999877, -0.0157073, -8.74228e-08, -0.0157073, 0.999877, 0, 8.7412e-08, 1.37318e-09, -1, 0.0694952, 8.30333, 10.6595)
modulate = Color(0.788235, 0.396078, 0.219608, 1)
font = ExtResource("2_snle5")
font_size = 1024

[node name="Info" type="Label" parent="."]
offset_left = 34.0
offset_top = 39.0
offset_right = 112.0
offset_bottom = 62.0
theme = ExtResource("3_3u6l1")
text = "Space : launch the dice.

R: Refresh and find
any dice that got lost

Click: lock/unlock dice
Right click: nudge dice

Up/Down: change focus
Left/Right: rotate
Mouse wheel: zoom"

[node name="Roll" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -184.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 63.0
grow_horizontal = 0
focus_mode = 0
theme = ExtResource("3_3u6l1")
text = "Roll the dice!"

[node name="Add" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -184.0
offset_top = 72.0
offset_right = -32.0
offset_bottom = 103.0
grow_horizontal = 0
focus_mode = 0
theme = ExtResource("3_3u6l1")
text = "Add Dice"

[node name="Remove" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -184.0
offset_top = 112.0
offset_right = -32.0
offset_bottom = 143.0
grow_horizontal = 0
focus_mode = 0
theme = ExtResource("3_3u6l1")
text = "Remove Dice"

[node name="Val" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.451
anchor_top = 0.37
anchor_right = 0.451
anchor_bottom = 0.37
offset_left = 0.447937
offset_top = 56.24
offset_right = 100.448
offset_bottom = 324.24
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_snle5")
theme_override_font_sizes/font_size = 256

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(0.999926, 0, 0.0121995, 0, 1, 0, -0.0121995, 0, 0.999926, -70.8772, 62.1553, -102.624)
light_color = Color(1, 1, 0.901961, 1)
light_energy = 25.0
light_specular = 0.0
omni_range = 4096.0

[node name="OmniLight3D2" type="OmniLight3D" parent="."]
transform = Transform3D(0.999926, 0, 0.0121995, 0, 1, 0, -0.0121995, 0, 0.999926, 45.346, 70.0015, -36.8654)
light_color = Color(1, 1, 0.901961, 1)
light_energy = 25.0
light_specular = 0.0
shadow_enabled = true
omni_range = 4096.0

[node name="LastContainer" type="ScrollContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -184.0
offset_top = -496.0
offset_right = -32.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("3_3u6l1")
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="Last" type="VBoxContainer" parent="LastContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="LastContainer/Last"]
layout_mode = 2
text = "



























"

[connection signal="pressed" from="Roll" to="." method="_on_roll_pressed"]
[connection signal="pressed" from="Add" to="." method="add_dice"]
[connection signal="pressed" from="Remove" to="." method="remove_dice"]
